tests/invalid/Template_Invalid_12.whiley
function f<T,S>(T x) -> (int y):
    return x

method main():
    bool x = f(1)